[package]
license = "MIT"
edition = "2021"
version = "0.1.4"
name = "auto-commit"
readme = "README.md"
categories = ["command-line-utilities"]
homepage = "https://github.com/m1guelpf/auto-commit"
repository = "https://github.com/m1guelpf/auto-commit"
description = "Automagically generate commit messages."
authors = ["Miguel Piedrafita <soy@miguelpiedrafita.com>"]

[dependencies]
serde = "1.0.164"
spinners = "4.1.0"
question = "0.2.2"
schemars = "0.8.12"
serde_json = "1.0.99"
tiktoken-rs = "0.7.0"
async-openai = "0.28.1"
clap-verbosity-flag  = "3.0.2"
env_logger = "0.11.8"
rand = "0.9.1"
log = { version = "0.4.8", features = ["std"] }
tokio = { version = "1.28.2", features = ["full"] }
clap = { version = "4.0.18", features = ["derive"] }


[lib]
name = "auto_commit"
path = "src/lib.rs"
